a lot of stuff has been done

--- a/solarity-backend/package.json
+++ b/solarity-backend/package.json
@@ -13,7 +13,10 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.5",
+    "agenda": "^4.2.1",
+    "axios": "^0.26.0",
     "babel-loader": "^8.0.0-beta.0",
+    "bluebird": "^3.7.2",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
