--- a/solarity-backend/.env.example
+++ b/solarity-backend/.env.example
@@ -4,4 +4,7 @@ MONGO_URL=
 BLOCKCHAINAPI_KEY_ID=
 BLOCKCHAINAPI_SECRET_KEY=
 COINAPI_API_KEY=
-TATUM_API
+TATUM_API=
+TWITTER_API_KEY=
+TWITTER_API_KEY_SECRET=
+TWITTER_BEARER_TOKEN=
