--- a/solarity-backend/package.json
+++ b/solarity-backend/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.7.2",
     "password-validator": "^5.2.1",
     "theblockchainapi": "^1.0.936",
+    "twitter-api-v2": "^1.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
