--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3004
+PORT=
 SESSION_SECRET=noice_Secretz
 MONGO_URL=
 BLOCKCHAINAPI_KEY_ID=
@@ -8,3 +8,4 @@ TATUM_API=
 TWITTER_API_KEY=
 TWITTER_API_KEY_SECRET=
 TWITTER_BEARER_TOKEN=
+ROLLBAR_ACCESSTOKEN=
