--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/web3.js": "^1.36.0",
     "agenda": "^4.2.1",
+    "aws-sdk": "^2.1092.0",
     "axios": "^0.26.0",
     "babel-loader": "^8.0.0-beta.0",
     "bluebird": "^3.7.2",
+    "bs58": "^5.0.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,13 +30,17 @@
     "generate-password": "^1.7.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.2",
     "password-validator": "^5.2.1",
     "rollbar": "^2.24.0",
     "theblockchainapi": "^1.0.936",
+    "tweetnacl": "^1.0.3",
     "twitter-api-v2": "^1.11.0",
     "yup": "^0.32.11"
   },
