--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ TWITTER_API_KEY=
 TWITTER_API_KEY_SECRET=
 TWITTER_BEARER_TOKEN=
 ROLLBAR_ACCESSTOKEN=
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_S3_BUCKET_NAME=
+SOLANA_RPC_ENDPOINT=
