--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "@nfteyez/sol-rayz": "^0.10.2",
+    "@solana/spl-governance": "^0.0.30",
     "@solana/web3.js": "^1.36.0",
     "agenda": "^4.2.1",
     "aws-sdk": "^2.1092.0",
