--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "bin/www",
-  "scripts": {},
+  "scripts": {
+    "start": "node bin/www",
+    "dev": "nodemon bin/www"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
