--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "bin/www",
-  "scripts": {},
+  "scripts": {
+    "build": "npx tsc --project ./"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
