--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "bin/www",
   "scripts": {
     "start": "node bin/www",
-    "dev": "nodemon bin/www",
-    "build": "npx tsc --project ./"
+    "dev": "nodemon bin/www"
   },
   "author": "",
   "license": "ISC",
