--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "bin/www",
+  "engines": {
+    "node": "16.13.1"
+  },
   "scripts": {
     "start": "node bin/www",
     "dev": "nodemon bin/www"
