--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bin/www",
   "engines": {
-    "node": "16.13.1"
+    "node": "16.13.0"
   },
   "scripts": {
     "start": "node bin/www",
@@ -31,6 +31,7 @@
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
