--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cors": "^2.8.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^7.1.4",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "generate-password": "^1.7.0",
