--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bin/www",
   "engines": {
-    "node": "16.13.0"
+    "node": ">=14.x"
   },
   "scripts": {
     "start": "node bin/www",
@@ -44,6 +44,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongoose": "^6.2.4",
+    "moralis": "^1.6.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "node-cache": "^5.1.2",
