Updated the env file

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
-PRODUCTION=true
-PORT=
-SESSION_SECRET=noice_Secretz
+PRODUCTION=
 MONGO_URL=
-BLOCKCHAINAPI_KEY_ID=
-BLOCKCHAINAPI_SECRET_KEY=
-COINAPI_API_KEY=
-TATUM_API=
+SESSION_SECRET=
+SOLANA_RPC_ENDPOINT=
+ALCHEMY_HTTP=
+ROLLBAR_ACCESS_TOKEN=
+DISCORD_APP_ID=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_PUBLIC_KEY=
 TWITTER_API_KEY=
 TWITTER_API_KEY_SECRET=
 TWITTER_BEARER_TOKEN=
-ROLLBAR_ACCESSTOKEN=
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
 AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
 AWS_S3_BUCKET_NAME=
-SOLANA_RPC_ENDPOINT=
+AWS_SECRET_KEY=
