--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.5",
+    "@ladjs/graceful": "^3.0.1",
     "@nfteyez/sol-rayz": "^0.7.2",
     "@solana/spl-governance": "^0.0.30",
     "@solana/web3.js": "^1.36.0",
@@ -28,6 +29,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "base-64": "^1.0.0",
     "bluebird": "^3.7.2",
+    "bree": "^9.0.1",
     "bs58": "^5.0.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
