--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.1",
     "nodemailer": "^6.7.2",
     "password-validator": "^5.2.1",
     "rollbar": "^2.24.0",
