--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "node-cron": "^3.0.1",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.20",
     "password-validator": "^5.2.1",
     "rollbar": "^2.24.0",
     "socket.io": "^4.4.1",
